--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
 </head>
 <body>
 
