--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,39 +15,34 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 </head>
+
 <body>
+        <div class="container">
+                <h1>Gart todots</h1>
+                <div id="app"></div>
+             </div>
+             <template id="todo-list">
+                  <ul class="tasks">
+                      <li v-for="todo in todos"
+                          :class="{completed: todo.completed}"
+                          class="task"
+                          @click="toggleTodo(todo.id)"
+                          @dblclick="deleteTodo(todo.id)">{{todo.task}}</li>
+                  </ul>
+              </template>
+              <template id="app-template">
+                  <div>
+                      <form @submit.prevent="addTodo">
+                          <input class="todo-input" type="text" placeholder="Enter a new Task" v-model="task" />
+                      </form>
+                      <todo-list :todos="todos"></todo-list>
+                  </div>
+              </template>
 
-    <div class="container">
-        <h1>Gart Todots</h1>
-        <div id="app"></div>
-    </div>
-
-    <template id="todo-list">
-        <ul class="tasks">
-            <li v-for = "todo is todos"
-                :class = "{completed: todo.completed}"
-                class="task"
-                @click = "toggleTodo(todo.id)"
-                @dblclick = "deleteTodo(todo.id)">
-
-                {{ todo.task }}
-
-            </li>
-        </ul>
-    </template>
-
-    <template id="app-template">
-        <div>
-            <form @submit.prevent = "addTodo">
-                <input type="text" class="todo-input" placeholder="Whats your new task" v-model="task" />
-            </form>
-
-            <todo-list />
-        </div>
-    </template>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.min.js"></script>
     <script src="app.js"></script>
-    
+
 </body>
+
 </html>
